--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: python
     region: oregon
     plan: free
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: python app.py
     runtime: python
