--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     region: oregon
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: startCommand: gunicorn app:app --bind 0.0.0.0:10000
     runtime: python
