--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,12 @@ pillow==11.3.0
 Werkzeug==3.1.3
 gunicorn
 openai>=1.16.0,<2.0.0
+azure-cognitiveservices-vision-computervision==0.9.1
+msrest==0.7.1
+azure-common==1.1.28
+azure-core==1.35.0
+isodate==0.7.2
+requests-oauthlib==2.0.0
+oauthlib==3.3.1
 
 
