--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-blinker==1.9.0
-click==8.2.1
-colorama==0.4.6
 Flask==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-numpy==2.2.6
-opencv-python==4.12.0.88
-pillow==11.3.0
-Werkzeug==3.1.3
 gunicorn
-openai>=1.16.0,<2.0.0
-azure-cognitiveservices-vision-computervision==0.9.1
-msrest==0.7.1
-azure-common==1.1.28
-azure-core==1.35.0
-isodate==0.7.2
-requests-oauthlib==2.0.0
-oauthlib==3.3.1
-
-
+requests
+python-docx
+beautifulsoup4
+markdown2
+python-dotenv
